--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sort_notes">Sort</string>
     <string name="note_deleted">Note Deleted</string>
     <string name="undo">Undo</string>
+    <string name="save_note">Save</string>
 </resources>
